se guardan images

--- a/Notebooks/exploratory_analysis.ipynb
+++ b/Notebooks/exploratory_analysis.ipynb
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -590,6 +590,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 2560x1920 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -597,7 +606,8 @@
     "plt.xlabel('Incumplimiento próximo mes')\n",
     "plt.ylabel('Frecuencia')\n",
     "plt.title('Distribución del incumplimiento de pago próximo mes')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "plt.savefig('../data/img/incumplimiento.png')\n"
    ]
   },
   {
@@ -652,13 +662,15 @@
     "plt.title('Incumplimiento de pago según género')\n",
     "plt.legend(['No incumplimiento', 'Incumplimiento'])\n",
     "plt.show()\n",
+    "plt.savefig('../data/img/incumplimiento_por_genero.png')\n",
     "\n",
     "# Relación entre el incumplimiento de pago y el límite de crédito\n",
     "sns.boxplot(x='default payment next month', y='LIMIT_BAL', data=data)\n",
     "plt.xlabel('Incumplimiento de pago')\n",
     "plt.ylabel('Límite de crédito')\n",
     "plt.title('Distribución del límite de crédito según el incumplimiento de pago')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "plt.savefig('../data/img/dist_in_p_g.png')"
    ]
   },
   {
@@ -682,7 +694,8 @@
     "plt.xlabel('Incumplimiento de pago')\n",
     "plt.ylabel('Edad')\n",
     "plt.title('Distribución de la edad según el incumplimiento de pago')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "plt.savefig('../data/img/dis_in_of_pay.png')"
    ]
   },
   {
@@ -707,7 +720,9 @@
     "plt.ylabel('Frecuencia')\n",
     "plt.title('Incumplimiento de pago según nivel educativo')\n",
     "plt.legend(['No incumplimiento', 'Incumplimiento'])\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "plt.savefig('../data/img/dis_in_of_edu.png')"
    ]
   },
   {
@@ -731,7 +746,8 @@
     "plt.figure(figsize=(16, 9))\n",
     "corr = data.select_dtypes(include=[np.number]).corr()\n",
     "sns.heatmap(corr, annot=True, fmt=\".2f\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.savefig('../data/img/heatmap.png')"
    ]
   }
  ],
